added data, configured template

--- a/source/_logo.html.haml
+++ b/source/_logo.html.haml
@@ -1,4 +1,4 @@
 .logo
   %h1.lockup
     = link_to http_prefix do
-      = image_tag "conquer-collaborative.png"
+      = image_tag "N-CEL_informal_web_gold_white_web.png", alt:"Neural-Circuit Engineering Laboratory | Drexel University School of Biomedical Engineering, Science and Health Systems"
