--- a/source/_sidebar-right-home.html.haml
+++ b/source/_sidebar-right-home.html.haml
@@ -1,5 +1,19 @@
 .home-panel
-  %h3 About
+  %h5 Recent Publications
   %ul.unstyled
-    %li The primary focus of research in our lab is to understand how the brain encodes sensory information and integrates this to produce intelligent motor output. We want to be able to use this knowledge to investigate changes in network activity under conditions of neural injury or dysfunction.
-  = link_to "About", "about", class: "more-link"
+    - data.publications[0..2].each do |pub|
+      %li
+        %strong= pub.title.chop
+        %br
+        = pub.journal[/^[a-zA-Z\s]*./].chop
+  = link_to "More Publications", "publications/recent", class: "more-link"
+
+.home-panel
+  %h5 Recent News
+  %ul.unstyled
+    - data.news[0..2].each do |n|
+      %li
+        %strong= n.title
+        %br
+        = n.date
+  = link_to "More News", "news/recent", class: "more-link"
