--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -11,6 +11,18 @@
     %link{:rel => "shortcut icon", :href => "#{http_prefix}images/FavIcon.ico"}
 
     = javascript_include_tag "modernizr"
+    :javascript
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-48789419-1']);
+      _gaq.push(['_setDomainName', 'drexel.edu']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
     = partial "css"
 
   %body{ :class => page_classes }
@@ -31,7 +43,7 @@
             .six.push-three.medium-6.medium-push-3.columns.main-content
               = yield
             .three.push-three.medium-3.medium-push-3.columns.sidebar-right
-              = partial "sidebar-right"
+              / = partial "sidebar-right"
             .three.pull-nine.medium-3.medium-pull-9.columns.sidebar-left
               = partial "nav-sidebar"
       %footer.footer
