adjusted portrait css, added bios, added portaits, adjusted slide text, changed research slide, ignored *.psd and *.pdf

--- a/source/_sidebar-right-home.html.haml
+++ b/source/_sidebar-right-home.html.haml
@@ -3,7 +3,7 @@
   %ul.unstyled
     - data.publications[0..2].each do |pub|
       %li
-        %strong= pub.title.chop
+        %strong= pub.title.gsub(/Drosophila/, "<em>Drosophila</em>").chop
         %br
         = pub.journal[/^[a-zA-Z\s]*./].chop
   = link_to "More Publications", "publications/recent", class: "more-link"
