--- a/source/blog/articles.html.haml
+++ b/source/blog/articles.html.haml
@@ -4,4 +4,4 @@ title: Blog Articles
 %h1= current_page.data.title
 
 %p This area is under construction.
-%p Check back soon! We will be publishing commentary relevant to the cutting-edge research being done in this exciting field.
+%p We plan to publish relevant commentary on research articles. Check back soon!
