--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,12 +3,11 @@ title: Home
 ---
 
 %ul.bxslider
-  %li= image_tag "slide-people.png", title: "#{link_to 'Lab Overview','lab/overview', class:'more-link'}"
-  %li= image_tag "slide-research.png", title: "#{link_to 'Recent Publications','publications/recent', class:'more-link'}"
-  %li= image_tag "slide-news.png", title: "#{link_to 'Recent News','news/recent', class:'more-link'}"
-  %li= image_tag "slide-research-2.png", title: "#{link_to 'Recent Publications','publications/recent', class:'more-link'}"
+  %li= image_tag "slide-people.png", title: "Meet the Lab Members #{link_to 'Lab Overview','lab/overview', class:'more-link'}"
+  %li= image_tag "slide-research.png", title: "Read published research #{link_to 'Recent Publications','publications/recent', class:'more-link'}"
+  %li= image_tag "slide-news.png", title: "Read latest news #{link_to 'Recent News','news/recent', class:'more-link'}"
 
-%h2 Research Overview
+%h2 N-CEL Research Overview
 %p A key question in both clinical and basic neuroscience research is how to create synaptic connections to restore function to a damaged or malfunctioning neural circuit. To date, pharmacological treatments and neural implants show promise in generating new synaptic connections; however, neither offers control over where synapses are established. Because a circuit’s function relies on precision within its connectivity, a need exists to generate targeted synaptic connections as a standalone or supplemental strategy for neural circuit repair.
 %p Our laboratory focuses on three major topics that all share the long-term goal of informing and generating strategies for neural-circuit repair:
 %ol
