--- a/source/people/lab-overview.html.haml
+++ b/source/people/lab-overview.html.haml
@@ -2,6 +2,7 @@
 title: Lab Overview
 ---
 %h1= current_page.data.title
+
 .clearfix
   = image_tag "http://drexel.edu/~/media/Images/biomed/faculty/von-reyn-catherine.ashx", class: "left"
   %h3 Catherine von Reyn, PhD
@@ -16,28 +17,55 @@ title: Lab Overview
     <strong>Email:</strong>
     = mail_to "catherine.r.vonreyn@drexel.edu"
 
-%p
+%hr
 
-%h5 Linda Solomon, MS
-%p Research Specialist
+.clearfix
+  = image_tag "david-goodman.png", class: "left"
+  %h5 David Goodman, BS
+  %p PhD Candidate
+  %p David graduated with a BS in Mathematics and Neuroscience from Drake University and is currently pursuing his PhD in Biomedical Engineering. He works to characterize the neural circuitry which connect sensory processing in <em>Drosophila</em> to escape behaviors, especially as mediated by the visual system.  His interests include developing biocomputational systems through neural engineering techniques and understanding natural information processing through sensory systems.
 
-%h5 HyoJong Jang, PhD
-%p PhD Candidate
+%hr
 
-%h5 David Goodman, BS
-%p PhD Candidate
+.clearfix
+  = image_tag "hyojong-jang.png", class: "left"
+  %h5 HyoJong (HJ) Jang, PhD
+  %p PhD Candidate
+  %P HJ is a PhD candidate in the School of Biomedical Engineering, Science and Health Systems.  Prior to his graduate studies at Drexel, he received his BS, MS and PhD degrees in Computer Science from Soongsil University in South Korea.  During his graduate research in South Korea, he studied image processing and pattern recognition. He then gained industry experience at SFA, developing automatic inspection systems to detect manufacturing defects in  Samsung LCD panels. Both his academic and industry experience in computer vision algorithms have guided his current research interests in the von Reyn Lab.  He now uses the model organism Drosophila melanogaster to tease out the mechanisms underlying how the brain recognizes or responds to external inputs.
 
-%h5 Brennan McFarland, BS
-%p PhD Candidate
+%hr
+
+.clearfix
+  = image_tag "brennan-mcfarland.png", class: "left"
+  %h5 Brennan McFarland, BS
+  %p PhD Candidate
+  %p Brennan McFarland received his BS in both neuroscience and psychology from Ursinus College in 2016. His undergraduate research focused on mitigating oxidative stress contributing to dopaminergic neuronal degeneration in Caenorhabditis elegans. Additionally, he worked in a neurodevelopmental lab investigating the potential role of microglia as guidepost cells and their influence on corticogenesis in a fetal alcohol syndrome disorder mouse model. Now at Drexel, Brennan is a first-year biomedical science PhD student and joined the lab in August 2016. Currently within the lab, he is focused on understanding the molecular cues that determine synaptic partners during development by using the model organism Drosophila melanogaster. Additionally, he is incorporating genetic engineering tools to modify synapses between neuronal populations. Outside of the lab, Brennan enjoys spending his free time reading, watching classic and foreign cinema (his favorite genre being horror/suspense), and volunteering as a Crisis Text Line counselor.
+
+%hr
+
+.clearfix
+  = image_tag "linda-solomon.png", class: "left"
+  %h5 Linda Solomon, MS
+  %p Research Specialist
+  %p
+    Linda Solomon is a <a href="https://scholar.google.com/scholar?as_q=Linda+Jane+Solomon&as_epq=Linda+Jane+Solomon&as_oq=&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C39">molecular biologist</a> and an artist who joined the von Reyn Lab at Drexel in March 2016. Prior, Linda worked at DuPont (Wilmington, DE) where she is a <a href="https://scholar.google.com/scholar?as_q=Linda+Jane+DeCarolis+EI+Du+Pont+De+Nemours+And+Company&as_epq=Linda+Jane+DeCarolis&as_oq=&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=2004&as_yhi=2010&btnG=&hl=en&as_sdt=0%2C39">co-author on ten issued patents</a>.
+
+  %p
+    She earned her MS in Plant Physiology and Genetics from University of Tennessee, Knoxville and her BS in Recombinant Gene Technology from SUNY Fredonia. She is a photo digital artist who has had numerous shows in Delaware. Linda sees art in her science and science in her art.
+    = link_to "Visit her portfolio site.", "http://www.ljsolomon.com"
+
+%hr
 
 %h5 Abby Eldredge, BS
 %p MS Student
 
-%h5 Kah Young
-%p STAR Scholar
+%hr
 
 %h5 Roze Alzabey
 %p STAR Scholar
 
 %h5 Daniel Gallagher
+%p STAR Scholar
+
+%h5 Kah Young
 %p STAR Scholar
