--- a/source/stylesheets/_home.scss
+++ b/source/stylesheets/_home.scss
@@ -1,3 +1,9 @@
+.index {
+  p {
+    font-size: 1.125rem;
+  }
+}
+
 .home-panel {
   background: $drexel-blue;
   padding-bottom: 1em;
@@ -12,6 +18,7 @@
   a.more-link {
     color: #fff;
   }
+
 
   ul {
     list-style: none; // clear default styling
