Megan Brown alumni added to ‘People’ page, the new lab name (NCE Lab) and logo updated, STAR picture and NSF EAGER grant posted to ’Recent News’ page, ‘Relevant Links’ page added to own page.

--- a/source/_sidebar-right-home.html.haml
+++ b/source/_sidebar-right-home.html.haml
@@ -13,7 +13,7 @@
   %ul.unstyled
     - data.news[0..2].each do |n|
       %li
-        %strong= n.title
+        %strong= n.title.gsub(/<img(.*)\/>/, "")
         %br
         = n.date
   = link_to "More News", "news/recent", class: "more-link"
