--- a/source/people/lab-overview.html.haml
+++ b/source/people/lab-overview.html.haml
@@ -1,7 +1,7 @@
 ---
 title: Lab Overview
 ---
-%h1= current_page.data.title
+%h3= current_page.data.title
 
 .clearfix
   = image_tag "http://drexel.edu/~/media/Images/biomed/faculty/von-reyn-catherine.ashx", class: "left"
@@ -69,3 +69,10 @@ title: Lab Overview
 
 %h5 Kah Young
 %p STAR Scholar
+
+%hr
+
+%h3 Alumni
+%ul
+  %li
+    %h5 Megan Brown, BS, 2016
