increase relevant links size

--- a/source/about/links.html.haml
+++ b/source/about/links.html.haml
@@ -4,7 +4,7 @@ title: Relevant Links
 %h1= current_page.data.title
 %p See below for a list of curated links to various helpful resources.
 
-%p= link_to "Drexel School of Biomedical Engineering, Science and Health Systems", "http://drexel.edu/biomed", class: "more-link"
-%p= link_to "Drexel College of Medicine Department of Neurobiology and Anatomy ", "http://drexel.edu/medicine/about/departments/Neurobiology-Anatomy", class: "more-link"
-%p= link_to "Janelia Research Campus", "http://www.janelia.org", class: "more-link"
-%p= link_to "Bloomington Stock Center", "http://flystocks.bio.indiana.edu", class: "more-link"
+%h3= link_to "Drexel School of Biomedical Engineering, Science and Health Systems", "http://drexel.edu/biomed", class: "more-link"
+%h3= link_to "Drexel College of Medicine Department of Neurobiology and Anatomy ", "http://drexel.edu/medicine/about/departments/Neurobiology-Anatomy", class: "more-link"
+%h3= link_to "Janelia Research Campus", "http://www.janelia.org", class: "more-link"
+%h3= link_to "Bloomington Stock Center", "http://flystocks.bio.indiana.edu", class: "more-link"
