--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -171,3 +171,10 @@ ul.unstyled {
     list-style: none;
   }
 }
+
+h1, h2, h3, h4, h5, h6 {
+  a.more-link {
+    font-size: 16px;
+    line-height: 16px;
+  }
+}
