--- a/source/layouts/home-page.haml
+++ b/source/layouts/home-page.haml
@@ -7,7 +7,7 @@
     %meta( charset="utf-8" )
     %meta( name="viewport" content="width=device-width, initial-scale=1.0" )
     / Use title if it's in the page YAML frontmatter
-    %title= "#{data.page.title} | #{data.info.site.title}" || "#{data.info.site.title}"
+    %title= "#{current_resource.data.title}" || "#{data.info.site.title}"
     %link{:rel => "shortcut icon", :href => "#{http_prefix}images/FavIcon.ico"}
 
     = javascript_include_tag "modernizr"
