updated with blog post and star 2018 news

--- a/source/people/lab-overview.html.haml
+++ b/source/people/lab-overview.html.haml
@@ -67,6 +67,12 @@ title: Lab Overview
 %h5 Daniel Gallagher
 %p STAR Scholar
 
+%h5 Pratishtha Guckhool
+%p STAR Scholar
+
+%h5 Neha Nevasekar
+%p STAR Scholar
+
 %h5 Kah Young
 %p STAR Scholar
 
