updated people page

--- a/source/people/lab-overview.html.haml
+++ b/source/people/lab-overview.html.haml
@@ -31,7 +31,7 @@ title: Lab Overview
   = image_tag "hyojong-jang.png", class: "left"
   %h5 HyoJong (HJ) Jang, PhD
   %p PhD Candidate
-  %P HJ is a PhD candidate in the School of Biomedical Engineering, Science and Health Systems.  Prior to his graduate studies at Drexel, he received his BS, MS and PhD degrees in Computer Science from Soongsil University in South Korea.  During his graduate research in South Korea, he studied image processing and pattern recognition. He then gained industry experience at SFA, developing automatic inspection systems to detect manufacturing defects in  Samsung LCD panels. Both his academic and industry experience in computer vision algorithms have guided his current research interests in the von Reyn Lab.  He now uses the model organism Drosophila melanogaster to tease out the mechanisms underlying how the brain recognizes or responds to external inputs.
+  %P HJ is a PhD candidate in the School of Biomedical Engineering, Science and Health Systems.  Prior to his graduate studies at Drexel, he received his BS, MS and PhD degrees in Computer Science from Soongsil University in South Korea.  During his graduate research in South Korea, he studied image processing and pattern recognition. He then gained industry experience at SFA, developing automatic inspection systems to detect manufacturing defects in  Samsung LCD panels. Both his academic and industry experience in computer vision algorithms have guided his current research interests in the von Reyn Lab. He now uses the model organism <em>Drosophila melanogaster</em> to tease out the mechanisms underlying how the brain recognizes or responds to external inputs.
 
 %hr
 
@@ -39,7 +39,7 @@ title: Lab Overview
   = image_tag "brennan-mcfarland.png", class: "left"
   %h5 Brennan McFarland, BS
   %p PhD Candidate
-  %p Brennan McFarland received his BS in both neuroscience and psychology from Ursinus College in 2016. His undergraduate research focused on mitigating oxidative stress contributing to dopaminergic neuronal degeneration in Caenorhabditis elegans. Additionally, he worked in a neurodevelopmental lab investigating the potential role of microglia as guidepost cells and their influence on corticogenesis in a fetal alcohol syndrome disorder mouse model. Now at Drexel, Brennan is a first-year biomedical science PhD student and joined the lab in August 2016. Currently within the lab, he is focused on understanding the molecular cues that determine synaptic partners during development by using the model organism Drosophila melanogaster. Additionally, he is incorporating genetic engineering tools to modify synapses between neuronal populations. Outside of the lab, Brennan enjoys spending his free time reading, watching classic and foreign cinema (his favorite genre being horror/suspense), and volunteering as a Crisis Text Line counselor.
+  %p Brennan McFarland received his BS in both neuroscience and psychology from Ursinus College in 2016. His undergraduate research focused on mitigating oxidative stress contributing to dopaminergic neuronal degeneration in Caenorhabditis elegans. Additionally, he worked in a neurodevelopmental lab investigating the potential role of microglia as guidepost cells and their influence on corticogenesis in a fetal alcohol syndrome disorder mouse model. Now at Drexel, Brennan is a first-year biomedical science PhD student and joined the lab in August 2016. Currently within the lab, he is focused on understanding the molecular cues that determine synaptic partners during development by using the model organism <em>Drosophila melanogaster</em>. Additionally, he is incorporating genetic engineering tools to modify synapses between neuronal populations. Outside of the lab, Brennan enjoys spending his free time reading, watching classic and foreign cinema (his favorite genre being horror/suspense), and volunteering as a Crisis Text Line counselor.
 
 %hr
 
@@ -54,15 +54,19 @@ title: Lab Overview
     She earned her MS in Plant Physiology and Genetics from University of Tennessee, Knoxville and her BS in Recombinant Gene Technology from SUNY Fredonia. She is a photo digital artist who has had numerous shows in Delaware. Linda sees art in her science and science in her art.
     = link_to "Visit her portfolio site.", "http://www.ljsolomon.com"
 
+  %hr
+.clearfix
+  = image_tag "roze-alzabey.png", class: "left"
+  %h5 Roze Alzabey
+  %p 
+    Roze Alzabey is a fourth-year Drexel student working towards her bachelor’s and master’s dual degree in Biomedical Engineering with a concentration in Neuroengineering. She previously participated in the STAR Scholar research program where she worked in the NCE Lab and investigated the role of Teneurin in establishing connectivity within the optic glomeruli of <em>Drosophila</em>. She has now rejoined the lab for her master’s thesis project that focuses on characterizing gene expression in distinct neural populations of the <em>Drosophila</em> visual system. She is highly involved at Drexel and is a member of the Student Ambassador Program, a Biomedical Engineering Peer Mentor, and is part of the Undergraduate Research Leaders. Outside of the lab, she enjoys fun things like trying new food and parking her Yaris in impossibly tight spaces.
 %hr
-
-%h5 Abby Eldredge, BS
-%p MS Student
-
+.clearfix
+  = image_tag "liudi-luo.png", class: "left"
+  %h5 Liudi Luo, MS
+  %p
+    Liudi is a Non-Employee Associate in the School of Biomedical Engineering, Science and Health Systems. He received his BE degree in Biomedical Engineering from Chongqing University in China and MS degree in Biomedical Engineering from Drexel University.  As an undergraduate researcher, he developed a mathematical model based assay to calculate gastric blood loss after hemorrhages.  As an intern at Beijing Hotgen Biotech Company, he was part of the R&D team that developed and improved Up-converting Phosphor Technology Point-Of-Care Testing (UPT-POCT). As a master’s student at Drexel University, Liudi joined the NCE Lab and developed a low cost optogenetic screening assay that can be used in high school and undergraduate neuroscience labs.  He is now in the process of optimizing/characterizing this assay. 
 %hr
-
-%h5 Roze Alzabey
-%p STAR Scholar
 
 %h5 Daniel Gallagher
 %p STAR Scholar
@@ -80,5 +84,7 @@ title: Lab Overview
 
 %h3 Alumni
 %ul
+  %li
+    %h5 Abby Eldredge, MS 2018
   %li
     %h5 Megan Brown, BS, 2016
