added categories and bhakti

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,7 +3,7 @@ title: Home
 ---
 
 %ul.bxslider
-  %li= image_tag "slide-people.png", title: "Meet the Lab Members #{link_to 'Lab Overview','lab/overview', class:'more-link'}"
+  %li= image_tag "slide-people.png", title: "Meet the Lab Members #{link_to 'Lab Overview','people/lab-overview', class:'more-link'}"
   %li= image_tag "slide-research.png", title: "Read published research #{link_to 'Recent Publications','publications/recent', class:'more-link'}"
   %li= image_tag "slide-news.png", title: "Read latest news #{link_to 'Recent News','news/recent', class:'more-link'}"
 
