--- a/source/people/lab-overview.html.haml
+++ b/source/people/lab-overview.html.haml
@@ -1,48 +1,53 @@
 ---
 title: Lab Overview
 ---
-%h3= current_page.data.title
+%h1 People
+%br
+%br
+.clearfix{style: "text-align: center;"}
+  %p
+    = image_tag "https://drexel.edu/~/media/Images/biomed/faculty/von-reyn-catherine.ashx"
 
-.clearfix
-  = image_tag "http://drexel.edu/~/media/Images/biomed/faculty/von-reyn-catherine.ashx", class: "left"
   %h3 Catherine von Reyn, PhD
   %p
-    Principal Investigator <br>
+    %strong Principal Investigator <br>
     Assistant Professor <br>
-    School of Biomedical Engineering, Science and Health Systems, Drexel University <br>
+    School of Biomedical Engineering, <br>Science and Health Systems, Drexel University, <br>
     Department of Neurobiology and Anatomy, DUCOM
   %p
     <strong>Office:</strong> Bossone 707<br>
     <strong>Phone:</strong> 215.895.2749<br>
     <strong>Email:</strong>
     = mail_to "catherine.r.vonreyn@drexel.edu"
+%br
+%br
 
+
+%h4 PhD Candidates
 %hr
-
 .clearfix
   = image_tag "david-goodman.png", class: "left"
   %h5 David Goodman, BS
   %p PhD Candidate
   %p David graduated with a BS in Mathematics and Neuroscience from Drake University and is currently pursuing his PhD in Biomedical Engineering. He works to characterize the neural circuitry which connect sensory processing in <em>Drosophila</em> to escape behaviors, especially as mediated by the visual system.  His interests include developing biocomputational systems through neural engineering techniques and understanding natural information processing through sensory systems.
-
-%hr
-
+%br
+%br
 .clearfix
   = image_tag "hyojong-jang.png", class: "left"
   %h5 HyoJong (HJ) Jang, PhD
   %p PhD Candidate
   %P HJ is a PhD candidate in the School of Biomedical Engineering, Science and Health Systems.  Prior to his graduate studies at Drexel, he received his BS, MS and PhD degrees in Computer Science from Soongsil University in South Korea.  During his graduate research in South Korea, he studied image processing and pattern recognition. He then gained industry experience at SFA, developing automatic inspection systems to detect manufacturing defects in  Samsung LCD panels. Both his academic and industry experience in computer vision algorithms have guided his current research interests in the von Reyn Lab. He now uses the model organism <em>Drosophila melanogaster</em> to tease out the mechanisms underlying how the brain recognizes or responds to external inputs.
-
-%hr
-
+%br
+%br
 .clearfix
   = image_tag "brennan-mcfarland.png", class: "left"
   %h5 Brennan McFarland, BS
   %p PhD Candidate
   %p Brennan McFarland received his BS in both neuroscience and psychology from Ursinus College in 2016. His undergraduate research focused on mitigating oxidative stress contributing to dopaminergic neuronal degeneration in Caenorhabditis elegans. Additionally, he worked in a neurodevelopmental lab investigating the potential role of microglia as guidepost cells and their influence on corticogenesis in a fetal alcohol syndrome disorder mouse model. Now at Drexel, Brennan is a first-year biomedical science PhD student and joined the lab in August 2016. Currently within the lab, he is focused on understanding the molecular cues that determine synaptic partners during development by using the model organism <em>Drosophila melanogaster</em>. Additionally, he is incorporating genetic engineering tools to modify synapses between neuronal populations. Outside of the lab, Brennan enjoys spending his free time reading, watching classic and foreign cinema (his favorite genre being horror/suspense), and volunteering as a Crisis Text Line counselor.
+%br
 
+%h4 Research Specialist
 %hr
-
 .clearfix
   = image_tag "linda-solomon.png", class: "left"
   %h5 Linda Solomon, MS
@@ -53,38 +58,49 @@ title: Lab Overview
   %p
     She earned her MS in Plant Physiology and Genetics from University of Tennessee, Knoxville and her BS in Recombinant Gene Technology from SUNY Fredonia. She is a photo digital artist who has had numerous shows in Delaware. Linda sees art in her science and science in her art.
     = link_to "Visit her portfolio site.", "http://www.ljsolomon.com"
+%br
 
-  %hr
+%h4 Masters Students
+%hr 
 .clearfix
   = image_tag "roze-alzabey.png", class: "left"
   %h5 Roze Alzabey
   %p 
     Roze Alzabey is a fourth-year Drexel student working towards her bachelor’s and master’s dual degree in Biomedical Engineering with a concentration in Neuroengineering. She previously participated in the STAR Scholar research program where she worked in the NCE Lab and investigated the role of Teneurin in establishing connectivity within the optic glomeruli of <em>Drosophila</em>. She has now rejoined the lab for her master’s thesis project that focuses on characterizing gene expression in distinct neural populations of the <em>Drosophila</em> visual system. She is highly involved at Drexel and is a member of the Student Ambassador Program, a Biomedical Engineering Peer Mentor, and is part of the Undergraduate Research Leaders. Outside of the lab, she enjoys fun things like trying new food and parking her Yaris in impossibly tight spaces.
-%hr
+%br
 .clearfix
   = image_tag "liudi-luo.png", class: "left"
   %h5 Liudi Luo, MS
   %p
     Liudi is a Non-Employee Associate in the School of Biomedical Engineering, Science and Health Systems. He received his BE degree in Biomedical Engineering from Chongqing University in China and MS degree in Biomedical Engineering from Drexel University.  As an undergraduate researcher, he developed a mathematical model based assay to calculate gastric blood loss after hemorrhages.  As an intern at Beijing Hotgen Biotech Company, he was part of the R&D team that developed and improved Up-converting Phosphor Technology Point-Of-Care Testing (UPT-POCT). As a master’s student at Drexel University, Liudi joined the NCE Lab and developed a low cost optogenetic screening assay that can be used in high school and undergraduate neuroscience labs.  He is now in the process of optimizing/characterizing this assay. 
+%br
+
+%h4 Undergraduate Students
 %hr
+.clearfix
+  = image_tag "bhakti-marfatia.png", class: "left"
+  %h5 Bhakti Marfatia
+  %p Bhakti Marfatia is a second-year Drexel student working towards her bachelor’s degree in Health Sciences. At Drexel, she was previously involved in the SEA-Phages program where she was able to work with bacteriophages and conduct her own research regarding the effectiveness of bacteriophages compared to antibiotics. It is her interest in neuroscience and neural circuits that has brought her to the NCE Lab where she is currently involved in mapping sensorimotor circuit connectivity in the model organism Drosophila melanogaster. Outside the lab, Bhakti enjoys reading, drawing, and taking pictures of nature. 
 
-%h5 Daniel Gallagher
-%p STAR Scholar
+%h4 STAR Scholars
 
-%h5 Pratishtha Guckhool
-%p STAR Scholar
-
-%h5 Neha Nevasekar
-%p STAR Scholar
-
-%h5 Kah Young
-%p STAR Scholar
+%ul
+  %li
+    %h5 Daniel Gallagher
+  %li
+    %h5 Pratishtha Guckhool
+  %li
+    %h5 Neha Nevasekar
+  %li
+    %h5 Kah Young
 
 %hr
 
 %h3 Alumni
 %ul
+  %li 
+    %h5 Sean O'Rourke, MS, 2020
   %li
-    %h5 Abby Eldredge, MS 2018
+    %h5 Abby Eldredge, MS, 2018
   %li
     %h5 Megan Brown, BS, 2016
