added AVasserman, updated Liudi

--- a/source/people/lab-overview.html.haml
+++ b/source/people/lab-overview.html.haml
@@ -1,4 +1,5 @@
 ---
+layout: col-2-left-nav
 title: Lab Overview
 ---
 %h1 People
@@ -72,7 +73,14 @@ title: Lab Overview
   = image_tag "liudi-luo.png", class: "left"
   %h5 Liudi Luo, MS
   %p
-    Liudi is a Non-Employee Associate in the School of Biomedical Engineering, Science and Health Systems. He received his BE degree in Biomedical Engineering from Chongqing University in China and MS degree in Biomedical Engineering from Drexel University.  As an undergraduate researcher, he developed a mathematical model based assay to calculate gastric blood loss after hemorrhages.  As an intern at Beijing Hotgen Biotech Company, he was part of the R&D team that developed and improved Up-converting Phosphor Technology Point-Of-Care Testing (UPT-POCT). As a master’s student at Drexel University, Liudi joined the NCE Lab and developed a low cost optogenetic screening assay that can be used in high school and undergraduate neuroscience labs.  He is now in the process of optimizing/characterizing this assay. 
+    Liudi is a Research Technician in the School of Biomedical Engineering, Science and Health Systems. He received his BE degree in Biomedical Engineering from Chongqing University in China and MS degree in Biomedical Engineering from Drexel University. As an undergraduate researcher, he developed a mathematical model based assay to calculate gastric blood loss after hemorrhages. As an intern at Beijing Hotgen Biotech Company, he was part of the R&D team that developed and improved Up-converting Phosphor Technology Point-Of-Care Testing (UPT-POCT). As a master’s student at Drexel University, Liudi joined the NCE Lab and developed a low cost optogenetic screening assay that can be used in high school and undergraduate neuroscience labs. As a research technician, he is now developing novel behavioral assays for investigating sensorimotor transformations in the fly. 
+%br
+
+.clearfix
+  = image_tag "alexander-vasserman.png", class: "left"
+  %h5 Alexander Vasserman
+  %p
+    Alexander Vasserman is a third-year Drexel student working towards a bachelors/masters dual degree in Biomedical Engineering. His concentration in neuroengineering and interest in the bridge between computer science and neuroscience brought him to the NCE Lab. He is currently working with with data from the hemibrain connectome projecet to map descending neuron circuit connectivity in Drosophila melanogaster. Outside the lab, Alex plays on the Drexel's Mens Ultimate Frisbee team, and enjoys rock climbing, programming, and watching football.
 %br
 
 %h4 Undergraduate Students
