--- a/source/people/lab-overview.html.haml
+++ b/source/people/lab-overview.html.haml
@@ -34,7 +34,7 @@ title: Lab Overview
 %br
 %br
 .clearfix
-  = image_tag "hyojong-jang.png", class: "left"
+  = image_tag "hyojong-jang.png", class: "left", style: "margin-bottom: 1em;"
   %h5 HyoJong (HJ) Jang, PhD
   %p PhD Candidate
   %P HJ is a PhD candidate in the School of Biomedical Engineering, Science and Health Systems.  Prior to his graduate studies at Drexel, he received his BS, MS and PhD degrees in Computer Science from Soongsil University in South Korea.  During his graduate research in South Korea, he studied image processing and pattern recognition. He then gained industry experience at SFA, developing automatic inspection systems to detect manufacturing defects in  Samsung LCD panels. Both his academic and industry experience in computer vision algorithms have guided his current research interests in the von Reyn Lab. He now uses the model organism <em>Drosophila melanogaster</em> to tease out the mechanisms underlying how the brain recognizes or responds to external inputs.
@@ -70,7 +70,7 @@ title: Lab Overview
     Roze Alzabey is a fourth-year Drexel student working towards her bachelor’s and master’s dual degree in Biomedical Engineering with a concentration in Neuroengineering. She previously participated in the STAR Scholar research program where she worked in the NCE Lab and investigated the role of Teneurin in establishing connectivity within the optic glomeruli of <em>Drosophila</em>. She has now rejoined the lab for her master’s thesis project that focuses on characterizing gene expression in distinct neural populations of the <em>Drosophila</em> visual system. She is highly involved at Drexel and is a member of the Student Ambassador Program, a Biomedical Engineering Peer Mentor, and is part of the Undergraduate Research Leaders. Outside of the lab, she enjoys fun things like trying new food and parking her Yaris in impossibly tight spaces.
 %br
 .clearfix
-  = image_tag "liudi-luo.png", class: "left"
+  = image_tag "liudi-luo.png", class: "left", style: "margin-bottom: 1em;"
   %h5 Liudi Luo, MS
   %p
     Liudi is a Research Technician in the School of Biomedical Engineering, Science and Health Systems. He received his BE degree in Biomedical Engineering from Chongqing University in China and MS degree in Biomedical Engineering from Drexel University. As an undergraduate researcher, he developed a mathematical model based assay to calculate gastric blood loss after hemorrhages. As an intern at Beijing Hotgen Biotech Company, he was part of the R&D team that developed and improved Up-converting Phosphor Technology Point-Of-Care Testing (UPT-POCT). As a master’s student at Drexel University, Liudi joined the NCE Lab and developed a low cost optogenetic screening assay that can be used in high school and undergraduate neuroscience labs. As a research technician, he is now developing novel behavioral assays for investigating sensorimotor transformations in the fly. 
